[package]
name = "lunar"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
crate-type = ["rlib"]

[[bin]]
name = "lunar"
path = "src/main.rs"

[features]
default = ["native"]
native = ["bevy/x11", "bevy/wayland", "bevy/multi_threaded"]
web = ["bevy/webgl2"]

[dependencies]
bevy = { version = "0.15", default-features = false, features = [
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_window",
    "bevy_winit",
    "default_font",
    "png",
    "webgl2",
] }
glam = { version = "0.29", features = ["serde"] }
rand = "0.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
getrandom = { version = "0.3", features = ["wasm_js"] }
js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = "0.3"

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[package.metadata.trunk]
wasm-opt = ["-Oz", "--enable-bulk-memory"]
